# ChemExtract

./: .gitignore  UNDERSTANDING.md  pyproject.toml
app/: main.py
app/api/: documents.py
app/core/: config.py
app/db/: session.py
app/models/: document.py  reaction.py
app/schemas/: document.py  parser.py  reaction.py
app/services/: background.py  parser.py
frontend/src/: App.tsx  types.ts
tests/: conftest.py  test_background_processing.py  test_document_list_pagination.py  test_document_model.py  test_documents_api.py  test_llm_parse_document.py  test_markdown_wrapped_json_is_parsed.py  test_openai_parse.py  test_reaction_model.py  test_reaction_structured_fields.py  test_reactions_api.py  test_retry_document.py
